# gpu-doctor

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/scripts/: issue_responder.py
.github/workflows/: changelog.yml  ci.yml  publish.yml  respond.yml
gpu_doctor/: __init__.py  __main__.py  detect.py
